# hotcoco

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  core_bench.cpp  file_io_bench.cpp  sync_bench.cpp  tcp_bench.cpp
cmake/: hotcocoConfig.cmake.in
docs/tutorials/: 01_coroutine_fundamentals.md  02_event_loops_and_libuv.md  03_async_tcp_networking.md  04_http_server.md  05_multithreaded_executors.md  06_debugging_with_sanitizers.md  07_error_handling_with_result.md  08_cancellation_and_timeouts.md  09_spawn_and_detached_coroutines.md  10_synchronization_primitives.md  11_retry_and_error_recovery.md  12_iouring_executor.md  13_stdexecution_bridge.md  14_iouring_file_operations.md
examples/: 01_basic_task.cpp  02_generator.cpp  03_async_sleep.cpp  04_tcp_echo_server.cpp  05_http_server.cpp  06_iouring_echo_server.cpp  07_stdexec_bridge.cpp  CMakeLists.txt
include/hotcoco/: hotcoco.hpp
include/hotcoco/core/: cancellation.hpp  channel.hpp  check.hpp  combinators.hpp  concepts.hpp  coroutine_compat.hpp  defer.hpp  detached_task.hpp  error.hpp  frame_pool.hpp  generator.hpp  invoke.hpp  result.hpp  retry.hpp  schedule_on.hpp  spawn.hpp  task.hpp  task_group.hpp  timeout.hpp  when_all.hpp  when_any.hpp
include/hotcoco/execution/: as_awaitable.hpp  scheduler.hpp  sender.hpp  stop_token_adapter.hpp
include/hotcoco/http/: http.hpp
include/hotcoco/io/: executor.hpp  iouring_async_ops.hpp  iouring_executor.hpp  iouring_file.hpp  iouring_tcp.hpp  libuv_executor.hpp  periodic_timer.hpp  polling_executor.hpp  sync_tcp.hpp  tcp.hpp  thread_pool_executor.hpp  thread_utils.hpp  timer.hpp
include/hotcoco/sync/: event.hpp  latch.hpp  mutex.hpp  rwlock.hpp  semaphore.hpp  sync_wait.hpp
src/core/: error.cpp  task.cpp
src/http/: http.cpp
src/io/: executor.cpp  iouring_executor.cpp  iouring_file.cpp  iouring_tcp.cpp  libuv_executor.cpp  polling_executor.cpp  sync_tcp.cpp  tcp.cpp  thread_pool_executor.cpp  thread_utils.cpp
tests/: CMakeLists.txt  cancellation_test.cpp  channel_test.cpp  combinator_test.cpp  concepts_test.cpp  defer_test.cpp  detached_task_test.cpp  error_test.cpp  event_test.cpp  execution_test.cpp  executor_test.cpp  frame_pool_test.cpp  generator_test.cpp  http_test.cpp  invoke_test.cpp  iouring_executor_test.cpp  iouring_file_test.cpp  iouring_tcp_test.cpp  latch_test.cpp  mutex_test.cpp  periodic_timer_test.cpp  polling_executor_test.cpp  result_test.cpp  retry_test.cpp  rwlock_test.cpp  schedule_on_test.cpp  semaphore_test.cpp  spawn_test.cpp  stress_test.cpp  sync_tcp_test.cpp  sync_wait_test.cpp  task_group_test.cpp  task_test.cpp  tcp_test.cpp  thread_pool_test.cpp  thread_utils_test.cpp  timeout_test.cpp  timer_test.cpp
